# django-react-starter

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.example.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_README.md  FIX_STATIC_FILES.md  LICENSE  Makefile  QUICK_DEPLOY.md  README.example.md  README.md  TENCENT_CLOUD_DEPLOYMENT.md  TODO.md  biome.json  deploy.sh  diagnose.sh  docker-compose.prod.yml  docker-compose.yml  extract-frontend.sh  server-setup.sh  tencent-cloud-setup.sh  ty.toml
.githooks/: README.md  (+1 more)
backend/: .coveragerc  .env.prod.example  .gitignore  diagnose_unicode.py  manage.py  pyproject.toml  run-app.sh  run-celery-worker.sh  supervisord.conf
backend/authentication/: __init__.py  serializers.py  urls.py  utils.py  views.py
backend/authentication/tests/: test_views.py
backend/core/: admin.py  apps.py  cache.py  middleware.py  serializers.py  views.py
backend/core/tests/: __init__.py  test_views.py  utils.py
backend/django_react_starter/: asgi.py  celery.py  sentry.py  urls.py  wsgi.py
backend/django_react_starter/settings/: base.py  development.py  production.py
backend/health/: __init__.py  apps.py  views.py
backend/health/tests/: test_views.py
backend/products/: admin.py  models.py  serializers.py  views.py
backend/products/migrations/: 0001_initial.py
backend/user/: admin.py  apps.py  indexers.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_user_managers.py
backend/user/tests/: factories.py  test_commands.py  test_indexers.py  test_models.py  test_views.py
(+850 files in other folders)
